Introduce ResultSetProducer abstraction and pluggable QueryResults
This extends existing v1 protocol with the ability to transfer other result set
representations then JSON-serialized list of objects.
New "result set formats" are pluggable on the client and server side.

Currently only `JsonResultSetProducer` is implemented which has the same semantics as existing protocol (streaming JSON inlined response).

Other formats can add arbitrary fields to the `QueryResults` response class, and the information about the current format is
represented by the `format` field. This field is optional, and when absent, always fallbacks to `json`
which is the existing `JsonResultSetProducer`.

Other formats are negotiated by the pluggable `ResultSetProducerFactory` on the server side.

This change is backward and forward compatible:

- new server with additional result set formats used by the old client will return result in `json` format (current protocol)
- new server with additional result set formats supported by the new client will return result in the negotiated format
- old server used by the new client supporting additional formats will return `json` format (current protocol)