@@ -18,6 +18,9 @@ import com.google.common.collect.ImmutableList;
 import io.trino.Session;
 import io.trino.client.ClientTypeSignature;
 import io.trino.client.Column;
+import io.trino.client.QueryResults;
+import io.trino.client.StatementStats;
+import io.trino.server.protocol.resultset.JsonArrayResultSetProducer;
 import io.trino.spi.Page;
 import io.trino.spi.TrinoException;
 import io.trino.spi.type.ArrayType;
@@ -33,9 +36,11 @@ import io.trino.testing.TestingSession;
 import io.trino.tests.BogusType;
 import org.junit.jupiter.api.Test;
 
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.OptionalDouble;
 import java.util.function.Consumer;
 import java.util.function.Function;
 
@@ -59,7 +64,7 @@ import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.assertTrue;
 import static org.testng.collections.Lists.newArrayList;
 
-public class TestQueryResultRows
+public class TestJsonQueryResults
 {
     private static final Function<String, Column> BOOLEAN_COLUMN = name -> new Column(name, BOOLEAN, new ClientTypeSignature(BOOLEAN));
     private static final Function<String, Column> BIGINT_COLUMN = name -> new Column(name, BIGINT, new ClientTypeSignature(BIGINT));
@@ -70,10 +75,10 @@ public class TestQueryResultRows
     {
         QueryResultRows rows = QueryResultRows.empty(getSession());
 
-        assertThat((Iterable<? extends List<Object>>) rows).as("rows").isEmpty();
-        assertThat(getAllValues(rows)).hasSize(0);
+        assertThat((Iterable<? extends List<Object>>) toIterableList(getSession(), List.of(), rows)).as("rows").isEmpty();
+        assertThat(getAllValues(List.of(), rows, ignoredException -> {})).hasSize(0);
         assertThat(rows.getColumns()).isEmpty();
-        assertThat(rows.iterator().hasNext()).isFalse();
+        assertThat(toIterableList(getSession(), List.of(), rows).iterator().hasNext()).isFalse();
     }
 
     @Test
@@ -85,8 +90,8 @@ public class TestQueryResultRows
                 .withSingleBooleanValue(column, true)
                 .build();
 
-        assertThat((Iterable<? extends List<Object>>) rows).as("rows").isNotEmpty();
-        assertThat(getAllValues(rows)).hasSize(1).containsOnly(ImmutableList.of(true));
+        assertThat((Iterable<? extends List<Object>>) toIterableList(getSession(), List.of(column), rows)).as("rows").isNotEmpty();
+        assertThat(getAllValues(List.of(column), rows, ignoredException -> {})).hasSize(1).containsOnly(ImmutableList.of(true));
         assertThat(rows.getColumns().orElseThrow()).containsOnly(column);
     }
 
@@ -101,11 +106,11 @@ public class TestQueryResultRows
                 .addPages(rowPagesBuilder(BigintType.BIGINT).row(value).build())
                 .build();
 
-        assertThat((Iterable<? extends List<Object>>) rows).as("rows").isNotEmpty();
+        assertThat((Iterable<? extends List<Object>>) toIterableList(getSession(), List.of(column), rows)).as("rows").isNotEmpty();
         assertThat(rows.getUpdateCount()).isPresent();
         assertThat(rows.getUpdateCount().get()).isEqualTo(value);
 
-        assertThat(getAllValues(rows)).containsExactly(ImmutableList.of(value));
+        assertThat(getAllValues(List.of(column), rows, ignoredException -> {})).containsExactly(ImmutableList.of(value));
         assertThat(rows.getColumns().orElseThrow()).containsOnly(column);
     }
 
@@ -118,9 +123,30 @@ public class TestQueryResultRows
                 .withSingleBooleanValue(column, false)
                 .build();
 
-        assertThat((Iterable<? extends List<Object>>) rows).as("rows").isNotEmpty();
+        assertThat((Iterable<? extends List<Object>>) toIterableList(getSession(), List.of(column), rows)).as("rows").isNotEmpty();
         assertThat(rows.getUpdateCount()).isEmpty();
-        assertThat(rows.iterator()).hasNext();
+        assertThat((toIterableList(getSession(), List.of(column), rows).iterator()).hasNext()).isTrue();
+    }
+
+    private static Iterable<List<Object>> toIterableList(Session session, List<Column> columns, QueryResultRows rows)
+    {
+        return toIterableList(session, columns, rows, exception -> {});
+    }
+
+    private static Iterable<List<Object>> toIterableList(Session session, List<Column> columns, QueryResultRows rows, Consumer<Throwable> throwableConsumer)
+    {
+        QueryResults basicInfo = QueryResults.builder()
+                .withQueryId("query_id")
+                .withInfoUri(URI.create("http://coordinator/info.uri"))
+                .withColumns(columns)
+                .withStats(StatementStats.builder()
+                        .setState("FINISHED")
+                        .setProgressPercentage(OptionalDouble.empty())
+                        .setRunningPercentage(OptionalDouble.empty())
+                        .build())
+                .buildEmpty();
+
+        return new JsonArrayResultSetProducer().handleNextRows(session, basicInfo, rows, throwableConsumer).getData();
     }
 
     @Test
@@ -147,15 +173,14 @@ public class TestQueryResultRows
         QueryResultRows rows = queryResultRowsBuilder(getSession())
                 .withColumnsAndTypes(columns, types)
                 .addPages(pages)
-                .withExceptionConsumer(exceptionConsumer)
                 .build();
 
-        assertThat((Iterable<? extends List<Object>>) rows).as("rows").isNotEmpty();
+        assertThat((Iterable<? extends List<Object>>) toIterableList(getSession(), columns, rows)).as("rows").isNotEmpty();
         assertThat(rows.getTotalRowsCount()).isEqualTo(10);
         assertThat(rows.getColumns()).isEqualTo(Optional.of(columns));
         assertThat(rows.getUpdateCount()).isEmpty();
 
-        assertThat(getAllValues(rows)).containsExactly(
+        assertThat(getAllValues(columns, rows, exceptionConsumer)).containsExactly(
                 ImmutableList.of(0, 10L),
                 ImmutableList.of(1, 11L),
                 ImmutableList.of(2, 12L),
@@ -187,7 +212,6 @@ public class TestQueryResultRows
         TestExceptionConsumer exceptionConsumer = new TestExceptionConsumer();
         QueryResultRows rows = queryResultRowsBuilder(getSession())
                 .withColumnsAndTypes(columns, types)
-                .withExceptionConsumer(exceptionConsumer)
                 .addPages(pages)
                 .build();
 
@@ -196,7 +220,7 @@ public class TestQueryResultRows
         assertThat(rows.getColumns()).isEqualTo(Optional.of(columns));
         assertTrue(rows.getUpdateCount().isEmpty());
 
-        assertThat(getAllValues(rows))
+        assertThat(getAllValues(columns, rows, exceptionConsumer))
                 .containsExactly(ImmutableList.of(0, 0));
 
         List<Throwable> exceptions = exceptionConsumer.getExceptions();
@@ -245,14 +269,13 @@ public class TestQueryResultRows
         TestExceptionConsumer exceptionConsumer = new TestExceptionConsumer();
         QueryResultRows rows = queryResultRowsBuilder(getSession())
                 .withColumnsAndTypes(columns, types)
-                .withExceptionConsumer(exceptionConsumer)
                 .addPages(pages)
                 .build();
 
         assertFalse(rows.isEmpty(), "rows are empty");
         assertThat(rows.getTotalRowsCount()).isEqualTo(3);
 
-        assertThat(getAllValues(rows))
+        assertThat(getAllValues(columns, rows, exceptionConsumer))
                 .hasSize(3)
                 .containsExactly(newArrayList(0, null), newArrayList(1, null), newArrayList(2, true));
     }
@@ -272,7 +295,6 @@ public class TestQueryResultRows
         TestExceptionConsumer exceptionConsumer = new TestExceptionConsumer();
         QueryResultRows rows = queryResultRowsBuilder(getSession())
                 .withColumnsAndTypes(columns, types)
-                .withExceptionConsumer(exceptionConsumer)
                 .addPages(pages)
                 .build();
 
@@ -280,7 +302,7 @@ public class TestQueryResultRows
         assertFalse(rows.isEmpty(), "rows are empty");
         assertThat(rows.getTotalRowsCount()).isEqualTo(1);
 
-        assertThat(getAllValues(rows))
+        assertThat(getAllValues(columns, rows, exceptionConsumer))
                 .hasSize(1)
                 .containsExactly(newArrayList(null, null));
     }
@@ -298,7 +320,6 @@ public class TestQueryResultRows
         TestExceptionConsumer exceptionConsumer = new TestExceptionConsumer();
         QueryResultRows rows = queryResultRowsBuilder(getSession())
                 .withColumnsAndTypes(columns, types)
-                .withExceptionConsumer(exceptionConsumer)
                 .addPages(pages)
                 .build();
 
@@ -306,7 +327,7 @@ public class TestQueryResultRows
         assertFalse(rows.isEmpty(), "rows are empty");
         assertThat(rows.getTotalRowsCount()).isEqualTo(1);
 
-        assertThat(getAllValues(rows))
+        assertThat(getAllValues(columns, rows, exceptionConsumer))
                 .hasSize(1)
                 .containsOnly(singletonList(singletonList(null)));
 
@@ -326,7 +347,6 @@ public class TestQueryResultRows
         TestExceptionConsumer exceptionConsumer = new TestExceptionConsumer();
         QueryResultRows rows = queryResultRowsBuilder(getSession())
                 .withColumnsAndTypes(columns, types)
-                .withExceptionConsumer(exceptionConsumer)
                 .addPages(pages)
                 .build();
 
@@ -334,7 +354,7 @@ public class TestQueryResultRows
         assertFalse(rows.isEmpty(), "rows are empty");
         assertThat(rows.getTotalRowsCount()).isEqualTo(1);
 
-        assertThat(getAllValues(rows))
+        assertThat(getAllValues(columns, rows, exceptionConsumer))
                 .hasSize(1)
                 .containsOnly(singletonList(singletonMap(10L, null)));
 
@@ -358,7 +378,6 @@ public class TestQueryResultRows
         TestExceptionConsumer exceptionConsumer = new TestExceptionConsumer();
         QueryResultRows rows = queryResultRowsBuilder(getSession())
                 .withColumnsAndTypes(columns, types)
-                .withExceptionConsumer(exceptionConsumer)
                 .addPages(pages)
                 .build();
 
@@ -366,7 +385,7 @@ public class TestQueryResultRows
         assertFalse(rows.isEmpty(), "rows are empty");
         assertThat(rows.getTotalRowsCount()).isEqualTo(1);
 
-        List<List<Object>> allValues = getAllValues(rows);
+        List<List<Object>> allValues = getAllValues(columns, rows, exceptionConsumer);
 
         assertThat(allValues)
                 .hasSize(1)
@@ -445,11 +464,11 @@ public class TestQueryResultRows
                 .hasMessage("data present without columns and types");
     }
 
-    private static List<List<Object>> getAllValues(QueryResultRows rows)
+    private static List<List<Object>> getAllValues(List<Column> columns, QueryResultRows rows, Consumer<Throwable> throwableConsumer)
     {
         ImmutableList.Builder<List<Object>> builder = ImmutableList.builder();
 
-        for (List<Object> values : rows) {
+        for (List<Object> values : toIterableList(getSession(), columns, rows, throwableConsumer)) {
             builder.add(values);
         }
 
